[tool.poetry]
name = "flask-pep"
version = "0.1.0"
description = ""
authors = ["Sadovskiy <safelikc@gmail.com>"]
readme = "README.md"
packages = [{include = "engine"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
